# eoapi-devseed

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGE.md  CHANGELOG.md  README.md  RELEASING.md  browser_config.js  cdk.json  config.yaml.example  docker-compose.metrics.yml  docker-compose.mock-oidc.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yaml  ingest.sh  publish-containers.yml  release-please.yml
.github/workflows/data/: noaa-emergency-response.json
.github/workflows/data/sentinel-2-iceland/: collections.json
.github/workflows/tests/: test_raster.py  test_stac.py  test_vector.py
dockerfiles/: Dockerfile.browser  Dockerfile.business  Dockerfile.raster  Dockerfile.stac  Dockerfile.stac-map  Dockerfile.vector  browser_config.js  browser_config.mjs  docker-entrypoint.sh
dockerfiles/landing/: index.html
dockerfiles/landing/assets/: extra.css  fonts.css  home.css
dockerfiles/metrics/: prometheus.yml
dockerfiles/metrics/grafana/dashboards/: eoapi-overview.json  eoapi-raster.json  eoapi-stac-auth-proxy.json  eoapi-stac.json  eoapi-vector.json
dockerfiles/metrics/grafana/provisioning/dashboards/: dashboards.yml
dockerfiles/scripts/: tile-config-entrypoint.sh
examples/: stac-stream-response.ipynb
infrastructure/: app.py  config.py  docker-compose.hetzner.yml
infrastructure/dockerfiles/: Dockerfile.raster  Dockerfile.stac  Dockerfile.vector
infrastructure/handlers/: raster_handler.py  stac_handler.py  vector_handler.py
runtimes/business/logic/: pyproject.toml
runtimes/business/logic/business/logic/: __init__.py  config.py  main.py  models.py  session.py
runtimes/eoapi/auth/: README.md  pyproject.toml
runtimes/eoapi/auth/eoapi/: auth.py
runtimes/eoapi/auth/eoapi/auth/: __init__.py  auth.py  config.py  errors.py
runtimes/eoapi/raster/: pyproject.toml
runtimes/eoapi/raster/eoapi/raster/: __init__.py  app.py  auth.py  config.py  logs.py  metrics.py
runtimes/eoapi/raster/eoapi/raster/templates/: header.html  map.html  stac-viewer.html
runtimes/eoapi/stac/: pyproject.toml
runtimes/eoapi/stac/eoapi/stac/: __init__.py  api.py  app.py  auth.py  client.py  config.py  extension.py  extensions.py  logs.py  metrics.py
runtimes/eoapi/stac/eoapi/stac/templates/: base.html  collection.html  collections.html  header.html  item.html  items.html  landing.html  queryables.html  search.html  stac-viewer.html
runtimes/eoapi/vector/: pyproject.toml
runtimes/eoapi/vector/eoapi/vector/: __init__.py  app.py  auth.py  config.py  metrics.py
runtimes/eoapi/vector/eoapi/vector/templates/: map.html
scripts/: demo_db_refresh.sh  get-pgstac-creds.sh  init-business-user.sql  install_demo_cron.sh  load  load-stac-records  simulate_traffic.py  simulate_traffic_loop.py
tests/: test_property.geojson
