[project]
name = "eoapi-devseed"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
deploy = [
    "aws-cdk-lib==2.220.0",
    "boto3==1.24.15",
    "eoapi-cdk==10.4.2",
    "pydantic-settings[yaml]==2.2.1",
    "pydantic==2.7",
    "typing-extensions>=4.12.2",
]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.1.0",
    "psycopg[pool]>=3.2.4",
    "pypgstac==0.9.9",
    "pytest>=8.3.4",
]
load = [
    "pgstacrs>=0.1.1",
    "stacrs>=0.5.9",
]
