[project]
name = "eoapi.auth"
description = "Auth tools for eoAPI."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
    {name = "Anthony Lukach", email = "anthony@developmentseed.org"}
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "requests",
    "fastapi-slim>=0.111.0",
    "pyjwt",
    "cryptography",
    "pydantic-settings>=2",
    "importlib_resources>=1.1.0;python_version<'3.9'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.version]
source = "file"
path = "eoapi/auth/__init__.py"

[tool.pdm.build]
includes = ["eoapi/auth"]
excludes = ["tests/", "**/.mypy_cache", "**/.DS_Store"]
